working on Section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
   </nav>
 
-    <div class="zone red container"><h1>SeCtIoN!</h1></div>
+    <div class="zone red container"><h1>Imagine 6 Months</h1></div>
   
  
     <div class="zone blue wrap">
@@ -29,7 +29,7 @@
       <div class="gallary zone"><img src="img/undraw.png"></div>
     </div>
  
-  <div class="zone yellow"><h3 class="food">Footer</h3></div>
+  <div class="zone yellow"><h2 class="food" style="text-align:center">Be Grateful</h2></div>
   <script type="text/javascript" src="world.js"></script>
 </body>
 </html>
