--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
   </nav>
 
-    <div class="zone red container"><h1>Imagine 6 Months</h1></div>
+    <div class="zone red container"><h1>Imagine How people were working</h1></div>
   
  
     <div class="zone blue wrap">
